FIx icon on mobile version

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -379,7 +379,7 @@ main{
     color: var(--white-color);
     display: grid;
     grid-template-columns: repeat(3, 8%);
-    margin: 0 0 0.7em 1em;
+    /* margin: 0 0 0.7em 1em; */
     padding-top: 1em;
     gap: 1.2em;
 }
